# ARC-AGI-2026-Paper

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/: paper_draft.md
docs/figures/: sample_grid.tex
results/: ablation_benchmark.json  evaluation.json  evaluation_parallel.json  kaggle_submission_notebook.py  task_1e0a9b12.json
scripts/: benchmark_ablation.py  build_kaggle_release.py  debug_hyps.py  download_data.py  evaluate.py  evaluate_parallel.py  export_kaggle_bundle.py  generate_paper_figures.py  plot_performance.py  solve.py  verify_submission.py
src/analytics/: failure_analyzer.py  xai_visualizer.py
src/api/: solver_api.py
src/ensemble/: ensemble_solver.py
src/evaluation/: evaluator.py  parallel_evaluator.py
src/evaluator/: parallel_evaluator.py
src/llm/: llm_assistant.py  llm_ensemble.py  prompt_generator.py
src/memory/: memory_store.py  retrospection_db.py
src/meta_learning/: active_copilot.py  autonomous_scientist.py  execution_cost.py  llm_validator.py  meta_engine.py  node_pruner.py  program_distance.py  program_reducer.py  scheduler_prioritizer.py  task_scheduler.py  trace_cacher.py
src/ranking/: ranker.py
src/reasoning/: color_rules.py  object_rules.py  rule_templates.py
src/reflection/: reflector.py
src/search/: bidirectional_search.py  distillation.py  ensemble_validator.py  heuristic_evaluator.py  neural_heuristic.py  program_cache_pro.py  pruning_engine.py  pruning_engine_pro.py  pruning_relaxed.py  relaxed_search.py  search_engine.py  slicing.py  structural_divergence.py  tta_consensus.py  tta_wrapper.py
src/submission/: code_minimizer.py  kaggle_exporter.py  submission_generator.py
src/ui/: app.py  dashboard.py  jupyter_magic.py  visualizer.py
src/utils/: config.py  io.py  (+1 more)
(+155 files in other folders)
